hphp/hack/test/typecheck/function_pointer/simple_function_pointer_targs_blank_mismatch.php
<?hh

function foo<T, Ta>(T $arg): void {
}

function test(): void {
  $x = foo<_>;
  $x(4);
}
